unpackaged/main/default/objects/Referral_Summary__c/Referral_Summary__c.object-meta.xml
<CustomObject>
    <label>Referral Summary</label>
    <nameField>
        <displayFormat>Referral#-{0000000}</displayFormat>
        <label>Referral Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>