unpackaged/main/default/objects/Referral_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral Summaries</relationshipLabel>
    <relationshipName>Referral_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>