unpackaged/main/default/objects/Referral_Summary__c/fields/Days_Since_Referral__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Referral__c</fullName>
    <formula>NOW() - Referral_DateTime__c</formula>
    <label>Days Since Referral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>