unpackaged/main/default/objects/Referral_Summary__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referral Summaries</relationshipLabel>
    <relationshipName>Referral_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>