unpackaged/main/default/objects/Referral_Summary__c/fields/NF_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>NF_Unique_Id__c</fullName>
    <label>NF Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>