unpackaged/main/default/objects/Referral_Summary__c/fields/Referral_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Referral_DateTime__c</fullName>
    <description>The purpose of this field is to generically capture values required by different referral sources.  A mapping of what this value means to each referral source is available in Confluence documentation.  This field will capture the Date/Time that the referral occurred for comparison purposes.</description>
    <label>Referral Date/Time</label>
    <type>DateTime</type>
</CustomField>