unpackaged/main/default/objects/Referral_Summary__c/fields/Referral_Sources__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sources__c</fullName>
    <label>Referral Sources</label>
    <referenceTo>Referral_Sources__c</referenceTo>
    <relationshipLabel>Referral Summaries</relationshipLabel>
    <relationshipName>Referral_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>