unpackaged/main/default/objects/Referral_Summary__c/fields/Referral_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Referral_Value_3__c</fullName>
    <description>The purpose of this field is to generically capture values required by different referral sources.  A mapping of what this value means to each referral source is available in Confluence documentation.</description>
    <label>Referral Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>