unpackaged/main/default/objects/Referral_Summary__c/fields/Web_Form__c.field-meta.xml
<CustomField>
    <fullName>Web_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Form</label>
    <referenceTo>Web_Form__c</referenceTo>
    <relationshipLabel>Referral Summaries</relationshipLabel>
    <relationshipName>Referral_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>